ESP-IDF_NovaGlide/build/log/idf_py_stdout_output_3650306
[1/13] Building C object esp-idf/sensors/CMakeFiles/__idf_sensors.dir/ultrasonic_hal.c.obj
FAILED: esp-idf/sensors/CMakeFiles/__idf_sensors.dir/ultrasonic_hal.c.obj 
/home/alex/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide/build/config -I/home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide/subsystems/sensors -I/home/alex/esp/esp-idf/v5.4.1/components/newlib/platform_include -I/home/alex/esp/esp-idf/v5.4.1/components/freertos/config/include -I/home/alex/esp/esp-idf/v5.4.1/components/freertos/config/include/freertos -I/home/alex/esp/esp-idf/v5.4.1/components/freertos/config/riscv/include -I/home/alex/esp/esp-idf/v5.4.1/components/freertos/FreeRTOS-Kernel/include -I/home/alex/esp/esp-idf/v5.4.1/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/alex/esp/esp-idf/v5.4.1/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/alex/esp/esp-idf/v5.4.1/components/freertos/esp_additions/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_hw_support/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_hw_support/include/soc -I/home/alex/esp/esp-idf/v5.4.1/components/esp_hw_support/include/soc/esp32c3 -I/home/alex/esp/esp-idf/v5.4.1/components/esp_hw_support/dma/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_hw_support/ldo/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_hw_support/debug_probe/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_hw_support/port/esp32c3/. -I/home/alex/esp/esp-idf/v5.4.1/components/esp_hw_support/port/esp32c3/include -I/home/alex/esp/esp-idf/v5.4.1/components/heap/include -I/home/alex/esp/esp-idf/v5.4.1/components/heap/tlsf -I/home/alex/esp/esp-idf/v5.4.1/components/log/include -I/home/alex/esp/esp-idf/v5.4.1/components/soc/include -I/home/alex/esp/esp-idf/v5.4.1/components/soc/esp32c3 -I/home/alex/esp/esp-idf/v5.4.1/components/soc/esp32c3/include -I/home/alex/esp/esp-idf/v5.4.1/components/soc/esp32c3/register -I/home/alex/esp/esp-idf/v5.4.1/components/hal/platform_port/include -I/home/alex/esp/esp-idf/v5.4.1/components/hal/esp32c3/include -I/home/alex/esp/esp-idf/v5.4.1/components/hal/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_rom/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_rom/esp32c3/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_rom/esp32c3/include/esp32c3 -I/home/alex/esp/esp-idf/v5.4.1/components/esp_rom/esp32c3 -I/home/alex/esp/esp-idf/v5.4.1/components/esp_common/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_system/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_system/port/soc -I/home/alex/esp/esp-idf/v5.4.1/components/esp_system/port/include/riscv -I/home/alex/esp/esp-idf/v5.4.1/components/esp_system/port/include/private -I/home/alex/esp/esp-idf/v5.4.1/components/riscv/include -I/home/alex/esp/esp-idf/v5.4.1/components/lwip/include -I/home/alex/esp/esp-idf/v5.4.1/components/lwip/include/apps -I/home/alex/esp/esp-idf/v5.4.1/components/lwip/include/apps/sntp -I/home/alex/esp/esp-idf/v5.4.1/components/lwip/lwip/src/include -I/home/alex/esp/esp-idf/v5.4.1/components/lwip/port/include -I/home/alex/esp/esp-idf/v5.4.1/components/lwip/port/freertos/include -I/home/alex/esp/esp-idf/v5.4.1/components/lwip/port/esp32xx/include -I/home/alex/esp/esp-idf/v5.4.1/components/lwip/port/esp32xx/include/arch -I/home/alex/esp/esp-idf/v5.4.1/components/lwip/port/esp32xx/include/sys -I/home/alex/esp/esp-idf/v5.4.1/components/driver/deprecated -I/home/alex/esp/esp-idf/v5.4.1/components/driver/i2c/include -I/home/alex/esp/esp-idf/v5.4.1/components/driver/touch_sensor/include -I/home/alex/esp/esp-idf/v5.4.1/components/driver/twai/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_pm/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_ringbuf/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_gpio/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_pcnt/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_gptimer/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_spi/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_mcpwm/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_ana_cmpr/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_i2s/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_sdmmc/include -I/home/alex/esp/esp-idf/v5.4.1/components/sdmmc/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_sdspi/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_sdio/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_dac/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_rmt/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_tsens/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_sdm/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_i2c/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_uart/include -I/home/alex/esp/esp-idf/v5.4.1/components/vfs/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_ledc/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_parlio/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_driver_usb_serial_jtag/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_adc/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_adc/interface -I/home/alex/esp/esp-idf/v5.4.1/components/esp_adc/esp32c3/include -I/home/alex/esp/esp-idf/v5.4.1/components/esp_adc/deprecated/include -I/home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide/subsystems/i2c_bus -I/home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide/managed_components/esp-idf-lib__ina219 -I/home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide/managed_components/esp-idf-lib__i2cdev -I/home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide/managed_components/esp-idf-lib__esp_idf_lib_helpers -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide=. -fmacro-prefix-map=/home/alex/esp/esp-idf/v5.4.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/sensors/CMakeFiles/__idf_sensors.dir/ultrasonic_hal.c.obj -MF esp-idf/sensors/CMakeFiles/__idf_sensors.dir/ultrasonic_hal.c.obj.d -o esp-idf/sensors/CMakeFiles/__idf_sensors.dir/ultrasonic_hal.c.obj -c /home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide/subsystems/sensors/ultrasonic_hal.c
/home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide/subsystems/sensors/ultrasonic_hal.c: In function 'ultrasonic_update_impl':
/home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide/subsystems/sensors/ultrasonic_hal.c:51:27: error: 'rmt_rx_done_event_data_t' has no member named 'symbols'; did you mean 'num_symbols'?
   51 |     uint32_t us = rx_data.symbols[0].duration0;
      |                           ^~~~~~~
      |                           num_symbols
[2/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/dashboard.c.obj
[3/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ESP-IDF_NovaGlide.c.obj
/home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide/main/ESP-IDF_NovaGlide.c:49:13: warning: 'display_joystick_task' defined but not used [-Wunused-function]
   49 | static void display_joystick_task(void *arg) {
      |             ^~~~~~~~~~~~~~~~~~~~~
[4/13] Performing build step for 'bootloader'
[1/1] cd /home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide/build/bootloader/esp-idf/esptool_py && /home/alex/.espressif/python_env/idf5.4_py3.13_env/bin/python /home/alex/esp/esp-idf/v5.4.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/alex/github/ESP-Nodes/ESP-IDF_NovaGlide/build/bootloader/bootloader.bin
Bootloader binary size 0x5160 bytes. 0x2ea0 bytes (36%) free.
ninja: build stopped: subcommand failed.
